- Fixed: butte to works now with throwing plus bows and xbows. (Raylde)

21-10-2022, Tolokio
- Fixed: Mounts stopping ticks if harmed by any char while being ridden (because lost of statf_ridden)
- Fixed: Mounts creating corpse at wrong place if killed while being mounted.
- Fixed: Mount losing statf_ridden while being ridden if mount get released.
- Fixed: Mount being duplicated after corpse is created. (Leather farm exploit)
Notes:
 Fixes also denies mount trying to fight back while mounted and denies pet desserting if owner harms it while being ridden.
 There is a known issue where deathanimation is not played on mount when it dies while being ridden. It just appear dead on the floor.
 Now riders will be dismounted if mount gets released or pet dies. (can be denied by script using proper triggers.)
 There can be issues related to attackers listing but none found yet.

22-10-2022, Drk84
- Fixed: PARTY.CREATE would make the invited player inviting himself..
		The command syntaxis: PARTY.CREATE msg,uid(s).
		Where msg is 0/1 sending default sysmessages or not, the following args (up to 9 more) is/are the players to add to this party.
		Note that by using PARTY.CREATE the player will be forced to enter the party, so you need to add your own "acceptance system".
		
24-10-2022, Raylde/Jhobean
[sphere.ini]: Added TimerCallUnit to be able use seconds instead of minutes with TimerCall

30-10-2022, Tolokio/Jhobean
- Fixed:  On Some freeshard it's possible to wear a spellbook in left hand (layer2). Now the book can be use in the hand instead of backpack only. (Issue #951)

04-11-2022, Drk84
- Fixed: LowerManaCost property didn't work properly. (Issue #949)

17-11-2022, Drk84
- Fixed: Faction & Slayer system -> bonus damage looks like not working. (Issue #964)
- Fixed: The SLAYER property will also be looked upon in a Spellbook on LAYER 2. (Issue #965)
- Added: In the source added method GetSpellbookLayer for retrieving a Spellbook in LAYER 1 or LAYER 2.