@@ -353,9 +353,9 @@ bool CBaseBaseDef::r_LoadVal( CScript & s )
 			{
 				int64 piVal[2];
                 int iQty = Str_ParseCmds( s.GetArgStr(), piVal, CountOf(piVal));
-				m_defenseBase = (uchar)(piVal[0]);
+				m_defenseBase = (word)(piVal[0]);
 				if ( iQty > 1 )
-					m_defenseRange = (uchar)(piVal[1]) - m_defenseBase;
+					m_defenseRange = (word)(piVal[1]) - m_defenseBase;
 				else
 					m_defenseRange = 0;
 			}
@@ -364,9 +364,9 @@ bool CBaseBaseDef::r_LoadVal( CScript & s )
 			{
 				int64 piVal[2];
 				int iQty = Str_ParseCmds( s.GetArgStr(), piVal, CountOf(piVal));
-				m_attackBase = (uchar)(piVal[0]);
+				m_attackBase = (word)(piVal[0]);
 				if ( iQty > 1 )
-					m_attackRange = (uchar)(piVal[1]) - m_attackBase;
+					m_attackRange = (word)(piVal[1]) - m_attackBase;
 				else
 					m_attackRange = 0;
 			}
