@@ -1732,6 +1732,7 @@ int CChar::Do_Use_Item(CItem *pItem, bool fLink)
 
 		case IT_CLOTHING:
 		case IT_ARMOR:
+		case IT_ARMOR_BONE:
 		case IT_ARMOR_CHAIN:
 		case IT_ARMOR_LEATHER:
 		case IT_ARMOR_RING:
