@@ -468,6 +468,7 @@ void CClient::AOSTooltip_addDefaultItemData(CItem * pItem)
 		break;
 
 	case IT_ARMOR:
+	case IT_ARMOR_BONE:
 	case IT_ARMOR_CHAIN:
 	case IT_ARMOR_LEATHER:
 	case IT_ARMOR_RING:
