@@ -190,6 +190,7 @@ public:
 		// IT_ARMOR_CHAIN
 		// IT_ARMOR_LEATHER
 		// IT_ARMOR_RING
+		// IT_ARMOR_BONE
 		// IT_SHIELD
 		// IT_CLOTHING
 		// IT_JEWELRY
